# yolov5_deepsort_ros

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
doc/: README_KOR.md
launch/: detector.launch  tracker.launch
scripts/: detector.py  track.py  tracker.py
scripts/deep_sort_pytorch/deep_sort/: deep_sort.py
